--- a/src/main/resources/fxml/AlumnosController.fxml
+++ b/src/main/resources/fxml/AlumnosController.fxml
@@ -14,22 +14,22 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane fx:id="root" dividerPositions="0.5" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane fx:id="root" dividerPositions="0.5" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
     <items>
         <GridPane>
             <columnConstraints>
-                <ColumnConstraints minWidth="10.0" prefWidth="100.0" hgrow="ALWAYS" />
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints vgrow="ALWAYS" />
                 <RowConstraints vgrow="NEVER" />
             </rowConstraints>
             <children>
-                <TableView GridPane.vgrow="ALWAYS">
+                <TableView fx:id="alumnosTableView" GridPane.vgrow="ALWAYS">
                     <columns>
-                        <TableColumn prefWidth="75.0" text="Nombre" />
-                        <TableColumn prefWidth="75.0" text="Apellidos" />
-                        <TableColumn prefWidth="75.0" text="Fecha de nacimiento" />
+                        <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Nombre" />
+                        <TableColumn fx:id="surnameColumn" prefWidth="75.0" text="Apellidos" />
+                        <TableColumn fx:id="datebirthColumn" prefWidth="75.0" text="Fecha de nacimiento" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -65,9 +65,9 @@
                 </HBox>
             </children>
         </GridPane>
-        <VBox alignment="CENTER">
+        <VBox fx:id="detailsBox" alignment="CENTER" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
             <children>
-                <Label text="Seleccione un alumno de la tabla de la izquierda" />
+                <Label alignment="CENTER" text="Seleccione un alumno de la tabla de la izquierda" />
             </children>
         </VBox>
     </items>
